Fixing overflowing div problem that was preventing button use

--- a/src/styl/index.styl
+++ b/src/styl/index.styl
@@ -1,9 +1,6 @@
 .virtual-link
     cursor pointer
 
-.noclick
-    pointer-events none
-
 .full-width
     width 100%
 
